--- a/radAR2/app/src/main/res/layout/activity_user_detail.xml
+++ b/radAR2/app/src/main/res/layout/activity_user_detail.xml
@@ -89,7 +89,7 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.625"
                     android:clickable="true"
-                    android:src="@drawable/img"
+                    android:src="@mipmap/ic_launcher"
                      />
 
                 <LinearLayout
