--- a/radAR2/app/src/main/res/layout/fragment_group_details.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_details.xml
@@ -87,6 +87,7 @@
                 </android.support.v7.widget.CardView>
 
                 <Button
+                    android:id="@+id/add_new_location"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
