--- a/radAR2/app/src/main/res/layout/content_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/content_home_screen.xml
@@ -52,7 +52,7 @@
             android:clickable="true"
             android:focusable="true"
             android:src="@drawable/ic_my_location_white_48dp"
-            android:alpha="1f"
+            android:alpha="1"
             app:elevation="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
