--- a/radAR2/app/src/main/res/menu/drawer_common.xml
+++ b/radAR2/app/src/main/res/menu/drawer_common.xml
@@ -29,7 +29,7 @@
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings_black_48dp"
-            android:title="Settings" />
+            android:title="Edit Profile" />
 
         <item
             android:id="@+id/nav_logout"
