--- a/radAR2/app/src/main/res/layout/content_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/content_home_screen.xml
@@ -26,7 +26,9 @@
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         android:layout_width="match_parent"
         android:layout_height="@dimen/place_autocomplete_powered_by_google_height"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,8 +96,6 @@
 
     <TextView
         android:id="@+id/text_new_friend"
-        android:textSize="@dimen/section_text_size"
-        android:textAlignment="center"
         android:layout_width="@dimen/home_screen_fab_text"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -104,6 +104,8 @@
         android:ems="10"
         android:gravity="end"
         android:text="@string/new_friend"
+        android:textAlignment="center"
+        android:textSize="@dimen/section_text_size"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/fab_new_friend"
         app:layout_constraintTop_toTopOf="@+id/fab_new_friend" />
@@ -124,8 +126,6 @@
 
     <TextView
         android:id="@+id/text_new_group"
-        android:textSize="@dimen/section_text_size"
-        android:textAlignment="center"
         android:layout_width="@dimen/home_screen_fab_text"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -134,6 +134,8 @@
         android:ems="10"
         android:gravity="end"
         android:text="@string/new_group"
+        android:textAlignment="center"
+        android:textSize="@dimen/section_text_size"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/fab_new_group"
         app:layout_constraintTop_toTopOf="@+id/fab_new_group" />
@@ -154,8 +156,6 @@
 
     <TextView
         android:id="@+id/text_new_chat"
-        android:textSize="@dimen/section_text_size"
-        android:textAlignment="center"
         android:layout_width="@dimen/home_screen_fab_text"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -164,6 +164,8 @@
         android:ems="10"
         android:gravity="end"
         android:text="@string/new_chat"
+        android:textAlignment="center"
+        android:textSize="@dimen/section_text_size"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/fab_new_chat"
         app:layout_constraintTop_toTopOf="@+id/fab_new_chat" />
