--- a/radAR2/app/src/main/res/layout/activity_edit.xml
+++ b/radAR2/app/src/main/res/layout/activity_edit.xml
@@ -100,16 +100,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit" />
+        app:layout_constraintTop_toBottomOf="@+id/upload" />
 
     <TextView
-        android:id="@+id/edit"
+        android:id="@+id/upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="Edit Image"
+        android:text="Upload Image"
         android:textAllCaps="false"
         android:textColor="@color/colorSuperAppBar"
         android:textSize="14sp"
