Fix Home Screen

--- a/radAR2/app/src/main/res/layout/content_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/content_home_screen.xml
@@ -18,14 +18,14 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:context="radar.radar.HomeScreenActivity" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <fragment
         android:id="@+id/place_autocomplete_fragment"
         android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
         android:layout_width="match_parent"
         android:layout_height="@dimen/place_autocomplete_powered_by_google_height"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
