Add text view beside 2 fab

--- a/radAR2/app/src/main/res/layout/content_home_screen.xml
+++ b/radAR2/app/src/main/res/layout/content_home_screen.xml
@@ -99,12 +99,13 @@
         android:layout_width="@dimen/home_screen_fab_text"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:background="@color/colorWhite"
         android:ems="10"
         android:gravity="end"
         android:text="@string/new_friend"
         android:textAlignment="center"
+        android:textColor="@color/colorBlack"
         android:textSize="@dimen/section_text_size"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/fab_new_friend"
@@ -129,12 +130,13 @@
         android:layout_width="@dimen/home_screen_fab_text"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="12dp"
         android:background="@color/colorWhite"
         android:ems="10"
         android:gravity="end"
         android:text="@string/new_group"
         android:textAlignment="center"
+        android:textColor="@color/colorBlack"
         android:textSize="@dimen/section_text_size"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/fab_new_group"
