--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -44,18 +44,15 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/last_message_from"
+                android:id="@+id/row_last_message_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kenneth: "
                 android:textColor="@color/colorPrimary" />
 
             <TextView
-
-                android:id="@+id/row_type_value"
+                android:id="@+id/row_last_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chat"
                 android:textColor="@android:color/darker_gray"
             />
         </LinearLayout>
