Store state on rotation for ChatActivity

--- a/radAR2/app/src/main/res/layout/fragment_group_details.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_details.xml
@@ -121,7 +121,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/group_details_members_recyclerView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="wrap_content" />
 
 
             </LinearLayout>
