--- a/radAR2/app/src/main/res/layout/activity_user_detail.xml
+++ b/radAR2/app/src/main/res/layout/activity_user_detail.xml
@@ -33,15 +33,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_margin="0dp"
+                    android:layout_marginTop="16dp"
                     android:layout_weight="1"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="1.0">
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_marginTop="8dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginRight="16dp"
                         android:gravity="right"
                         android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +59,6 @@
                             android:clickable="true"
                             android:contentDescription="@string/trackuser"
                             app:srcCompat="@drawable/ic_person_add_white_48dp" />
-
                     </LinearLayout>
 
                 </android.support.constraint.ConstraintLayout>
