fix current location and add onClickListener for HomeScreen marker

--- a/radAR2/app/src/main/res/layout/activity_google_maps.xml
+++ b/radAR2/app/src/main/res/layout/activity_google_maps.xml
@@ -4,36 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/linearLayout3"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:text="Button" />
-
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="2dp"
-            android:background="@color/colorPrimary" />
-
-    </LinearLayout>
-
     <fragment
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout3"
-        tools:context="radar.radar.MapsActivity" />
+        tools:context="radar.radar.MapsActivity"
+        tools:layout="@layout/activity_google_maps" />
 
 </RelativeLayout>
