--- a/radAR2/app/src/main/res/layout/activity_friend_request.xml
+++ b/radAR2/app/src/main/res/layout/activity_friend_request.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="radar.radar.TabbedSearchActivity">
+    tools:context="radar.radar.FriendRequestActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -14,6 +14,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="5dp"
         android:theme="@style/AppTheme.AppBarOverlay">
+
+        <android.support.v7.widget.Toolbar
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            android:id="@+id/friend_request_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
