--- a/radAR2/app/src/main/res/layout/fragment_group_details.xml
+++ b/radAR2/app/src/main/res/layout/fragment_group_details.xml
@@ -59,23 +59,24 @@
                             android:background="@color/cardview_light_background">
 
                             <TextView
+                                android:id="@+id/group_detail_dest_name"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
                                 android:layout_marginStart="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="South Lawn"
+                                android:text="Set a meeting point."
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
 
                             <TextView
+                                android:id="@+id/group_detail_distance"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="8dp"
                                 android:layout_marginEnd="8dp"
                                 android:layout_marginTop="8dp"
-                                android:text="300m"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintTop_toTopOf="parent" />
