--- a/radAR2/app/src/main/res/layout/row_chat.xml
+++ b/radAR2/app/src/main/res/layout/row_chat.xml
@@ -12,7 +12,7 @@
     android:background="@color/colorWhite">
 
     <!--We can add content of the cardview here -->
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/row_profile_picture"
         android:layout_width="@dimen/group_img_size"
         android:layout_height="@dimen/group_img_size"
