--- a/radAR2/app/src/main/res/layout/nav_header_common.xml
+++ b/radAR2/app/src/main/res/layout/nav_header_common.xml
@@ -17,7 +17,7 @@
         android:layout_width="72dp"
         android:layout_height="72dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        android:src="@mipmap/ic_launcher_round" />
 
     <TextView
         android:id="@+id/nav_header_name"
